--- a/autowebsite/src/app/page.css
+++ b/autowebsite/src/app/page.css
@@ -19,7 +19,16 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+  padding: 1em;
+  margin: 1em;
+  font-size: 2em;
+  border: .3em solid transparent;
+  background-image: linear-gradient(black, black), radial-gradient(circle at top left, #ff8a00,#da1b60);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  border-radius: 1em;
+} 
+
 
 .contentPanels {
   height: 85%;
@@ -28,10 +37,41 @@ body, html {
 
 .panel {
   width: 50%;
+  padding: 2em;
 }
 
 .panelHeader {
-  background-color: lightgray;
+  border: .3em solid transparent;
+  background-image: linear-gradient(black, black), radial-gradient(circle at top left, #ff8a00,#da1b60);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  border-radius: 1em;
+  text-align: center;
+  font-size: 2em;
+
   padding: 10px;
   font-weight: bold;
+}
+
+.code {
+  margin-top: 1em;
+  font-size: 1em;
+}
+
+.component {
+  all: unset;
+  padding: 1em;
+}
+
+.error-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.error-text {
+  font-size: 24px;
+  text-align: center;
 }
